fixing spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,7 @@ nav {
 @media screen and (max-width: 500px) {
   .menu-button {
     font-size: 3em;
+    padding: 0em;
   }
 }
 
